removed scss file, logo appeared, css changes still need modification to appear

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css"
+    <link rel="stylesheet" href="./css/main.css">
     <title>Angela Pogoda's Portfolio</title>
-</head>
+<head>
 <body>
     <header>
         <div>
-            <a href="./index.html"><img src=".images/Logo.jpg" alt="Logo icon"></a>
+            <a href="./index.html"><img src="./images/Logo.jpg" alt="Logo icon"></a>
         </div>
-        <nav>
+        <nav class="nav-items">
             <a href="./pages/aboutme.html">About Me</a>
-            <a href="./pages/blog.html">Blog</a>
             <a href="./pages/projects.html">Projects</a>
+            <a href="./pages/blog.html">Blog</a>
             <a href="./pages/contactme.html">Contact Me</a>
         </nav>
         <h1>Hi! Thank you for visiting!</h1>
         <p>Thank you for visiting my portfolio website. While navigating through the different areas of my portfolio website, my current coding experience and skills will be presented. This will also allow for a starting point so I can expand on further services and skills. </p>
-        </header>
+    </header>
         <main>
 
         </main>
@@ -28,4 +28,5 @@
 
         </footer>
 </body>
+</head>
 </html>
