Added social media and contact info to logo and styled these areas in CSS, still having issues with CSS not reflecting in web browser

--- a/index.html
+++ b/index.html
@@ -22,10 +22,21 @@
         <p>Thank you for visiting my portfolio website. While navigating through the different areas of my portfolio website, my current coding experience and skills will be presented. This will also allow for a starting point so I can expand on further services and skills. </p>
     </header>
         <main>
-
+        <h2>Home Page</h2>
         </main>
         <footer>
-
+            <div class="social-media">
+                <a href="https://www.github.com/AngelaPogoda" target="_blank"><img src="./images/github.jpg" alt="GitHub icon"></a>
+                <a href="https://www.linkedin.com/in/angela-pogoda-2885891a0/" target="_blank"><img src="./images/linkedin.jpg" alt="LinkedIn icon"></a>
+                <a href="https://twitter.com/AngelaPogoda" target="_blank"><img src="./images/twitter.jpg" alt="Twitter icon"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook.jpg" alt="Facebook icon"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram.jpg" alt="Instagram icon"> </a>
+            </div>
+            <div class="contact-info">
+                <p>Phone: 0400 000 000</p>
+                <p>Email: angela@gmail.com</p>
+            </div>
+            <p>© AngelaPogoda 2022</p>
         </footer>
 </body>
 </head>
