added scss file, updated readme.md file and have almost completed index.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./CSS/style.css">
     <title>Angela Pogoda's Portfolio</title>
 <head>
 <body>
-    <header>
-        <div>
+    <header class="header">
+        <div class="logo">
             <a href="./index.html"><img src="./images/Logo.jpg" alt="Logo icon"></a>
         </div>
         <nav class="nav-items">
@@ -26,11 +26,11 @@
         </main>
         <footer>
             <div class="social-media">
-                <a href="https://www.github.com/AngelaPogoda" target="_blank"><img src="./images/github.jpg" alt="GitHub icon"></a>
-                <a href="https://www.linkedin.com/in/angela-pogoda-2885891a0/" target="_blank"><img src="./images/linkedin.jpg" alt="LinkedIn icon"></a>
-                <a href="https://twitter.com/AngelaPogoda" target="_blank"><img src="./images/twitter.jpg" alt="Twitter icon"></a>
-                <a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook.jpg" alt="Facebook icon"></a>
-                <a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram.jpg" alt="Instagram icon"> </a>
+                <a href="https://www.github.com/AngelaPogoda" target="_blank"><img src="./links/github.svg" alt="GitHub icon"></a>
+                <a href="https://www.linkedin.com/in/angela-pogoda-2885891a0/" target="_blank"><img src="./links/linkedin.svg" alt="LinkedIn icon"></a>
+                <a href="https://twitter.com/AngelaPogoda" target="_blank"><img src="./links/twitter.svg" alt="Twitter icon"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="./links/facebook.svg" alt="Facebook icon"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="./links/instagram.svg" alt="Instagram icon"> </a>
             </div>
             <div class="contact-info">
                 <p>Phone: 0400 000 000</p>
