--- a/index.html
+++ b/index.html
@@ -9,23 +9,21 @@
 <head>
 <body>
     <header class="header">
-        <div class="logo">
-            <a href="./index.html"><img src="./images/Logo.jpg" alt="Logo icon"></a>
-        </div>
+            <a href="./index.html" class="logo"><img src="./images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
             <a href="./pages/aboutme.html">About Me</a>
             <a href="./pages/projects.html">Projects</a>
             <a href="./pages/blog.html">Blog</a>
             <a href="./pages/contactme.html">Contact Me</a>
         </nav>
-        <h1>Hi! Thank you for visiting!</h1>
-        <p>Thank you for visiting my portfolio website. While navigating through the different areas of my portfolio website, my current coding experience and skills will be presented. This will also allow for a starting point so I can expand on further services and skills. </p>
     </header>
         <main>
-        <h2>Home Page</h2>
+            <h2>Hi! Thank you for visiting!</h2>
+            <p>Thank you for visiting my portfolio website. While navigating through the different areas of my portfolio website, my current coding experience and skills will be presented. This will also allow for a starting point so I can expand on further services and skills. </p>
         </main>
         <footer>
             <div class="social-media">
+                <p>Get to know me further on:</p>
                 <a href="https://www.github.com/AngelaPogoda" target="_blank"><img src="./links/github.svg" alt="GitHub icon"></a>
                 <a href="https://www.linkedin.com/in/angela-pogoda-2885891a0/" target="_blank"><img src="./links/linkedin.svg" alt="LinkedIn icon"></a>
                 <a href="https://twitter.com/AngelaPogoda" target="_blank"><img src="./links/twitter.svg" alt="Twitter icon"></a>
@@ -33,6 +31,7 @@
                 <a href="https://www.instagram.com/" target="_blank"><img src="./links/instagram.svg" alt="Instagram icon"> </a>
             </div>
             <div class="contact-info">
+                <h4>Contact Me</h4>
                 <p>Phone: 0400 000 000</p>
                 <p>Email: angela@gmail.com</p>
             </div>
