--- a/index.html
+++ b/index.html
@@ -17,31 +17,25 @@
             <a href="./pages/contactme.html"><strong>Contact Me</strong></a>
         </nav>
     </header>
-        <main>
-            <h1>Hi! Thank you for visiting!</h1>
-            <p>Thank you for visiting my portfolio website. While navigating through the different areas of my portfolio website, my current coding experience and skills will be presented. This will also allow for a starting point so I can expand on further services and skills. </p>
-        </main>
-        <footer>
-            <div class="social-media-1">
-                <p>Get to know me further on:</p>
-                <li>
+    <main>
+        <h1>Hi! Thank you for visiting!</h1>
+        <p>Thank you for visiting my portfolio website. While navigating through the different areas of my portfolio website, my current coding experience and skills will be presented. This will also allow for a starting point so I can expand on further services and skills. </p>
+    </main>
+    <footer>
+        <div class="social-media">
+            <p>Get to know me further on:</p>
                 <a href="https://www.github.com/AngelaPogoda" target="_blank"><img src="./links/github.svg" alt="GitHub icon"></a>
-                <a href="https://www.linkedin.com/in/angela-pogoda-2885891a0/" target="_blank"><img src="./links/linkedin.svg" alt="LinkedIn icon"></a>
-                </li>
-            </div>
-            <div class="social-media-2">
-                <li>
+                <a href="https://www.linkedin.com/in/angela-pogoda-2885891a0/" target="_blank"><img src="./links/linkedin.svg" alt="LinkedIn icon"></a>    
                 <a href="https://twitter.com/AngelaPogoda" target="_blank"><img src="./links/twitter.svg" alt="Twitter icon"></a>
                 <a href="https://www.facebook.com/" target="_blank"><img src="./links/facebook.svg" alt="Facebook icon"></a>
                 <a href="https://www.instagram.com/" target="_blank"><img src="./links/instagram.svg" alt="Instagram icon"> </a>
-                </li>
-            </div>
-            <div class="contact-info">
-                <h4>Contact Me</h4>
-                <p>Phone: 0400 000 000</p>
-                <p>Email: angela@gmail.com</p>
-            </div>
-            <p>© AngelaPogoda 2022</p>
+        </div>
+        <div class="contact-info">
+            <h4>Contact Me</h4>
+            <p>Phone: 0400 000 000</p>
+            <p>Email: angela@gmail.com</p>
+            <h5>© Angela Pogoda 2022</h5>
+        </div>
         </footer>
 </body>
 </head>
