blog page almost complete, need to add the links for the anchor tags, reposition the images and add an image for the Gardening Blog

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -9,34 +9,70 @@
 <head>
 <body>
     <header class="header">
-            <a href="./index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
+            <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
-            <a href="./index.html"><strong>Home</strong></a>
+            <a href="../pages/index.html"><strong>Home</strong></a>
             <a href="../pages/about-me.html"><strong>About Me</strong></a>
             <a href="../pages/projects.html"><strong>Projects</strong></a>
             <a href="../pages/contact-me.html"><strong>Contact Me</strong></a>
         </nav>
     </header>
-    <main>
+    <main class="blog">
         <h1>Blog</h1>
-        <p>enter blog cards</p>
+        <div class="blog-cards">
+            <img src="../images/My-Pets.jpg" alt="My Pets icon"></a>
+                <div class="container blog-text">
+                    <h5>My Pets</h5>
+                    <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. Click here to read more.</p>
+                </div>
+        </div>
+        <div class="blog-cards">
+            <img src="../images/Auslan-alphabet.jpg" alt="Auslan Alphabet icon"></a>
+            <div class="container blog-text">
+                <h5>My Pets</h5>
+                <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. Click here to read more.</p>
+            </div>
+        </div>
+        <div class="blog-cards">
+            <img src="../images/The-Pyjama-Foundation.png" alt="The Pyjama Foundation icon"></a>
+            <div class="container blog-text">
+                <h5>My Pets</h5>
+                <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. Click here to read more.</p>
+            </div>
+        </div>
+        <div class="blog-cards">
+            <img src="../images/Rosies.png" alt="Rosies icon"></a>
+            <div class="container blog-text">
+                <h5>My Pets</h5>
+                <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. Click here to read more.</p>
+            </div>
+        </div>
+        <div class="blog-cards">
+            <img src="../images/Plants.jpg" alt="Plants icon"></a>
+            <div class="container blog-text">
+                <h5>My Pets</h5>
+                <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. Click here to read more.</p>
+            </div>
+        </div>
     </main>
-    <footer>
-        <div class="social-media">
-            <p>Get to know me further on:</p>
+    <footer class="footer">
+        <div class="footer-contents">
+            <div class="social-media">
+                <p>Get to know me further on:</p>
                 <a href="https://www.github.com/AngelaPogoda" target="_blank"><img src="../links/github.svg" alt="GitHub icon"></a>
                 <a href="https://www.linkedin.com/in/angela-pogoda-2885891a0/" target="_blank"><img src="../links/linkedin.svg" alt="LinkedIn icon"></a>    
                 <a href="https://twitter.com/AngelaPogoda" target="_blank"><img src="../links/twitter.svg" alt="Twitter icon"></a>
                 <a href="https://www.facebook.com/" target="_blank"><img src="../links/facebook.svg" alt="Facebook icon"></a>
                 <a href="https://www.instagram.com/" target="_blank"><img src="../links/instagram.svg" alt="Instagram icon"> </a>
+            </div>
+            <div class="contact-info">
+                <h4>Contact Me</h4>
+                <p>Phone: 0400 000 000</p>
+                <p>Email: angela@gmail.com</p>
+                <h5>© Angela Pogoda 2022</h5>
+            </div>
         </div>
-        <div class="contact-info">
-            <h4>Contact Me</h4>
-            <p>Phone: 0400 000 000</p>
-            <p>Email: angela@gmail.com</p>
-            <h5>© Angela Pogoda 2022</h5>
-        </div>
-        </footer>
+    </footer>
 </body>
 </head>
 </html>
