--- a/pages/index.html
+++ b/pages/index.html
@@ -11,15 +11,15 @@
     <header class="header">
             <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
-            <a href="../pages/index.html"><strong>Home</strong></a>
             <a href="../pages/about-me.html"><strong>About Me</strong></a>
             <a href="../pages/projects.html"><strong>Projects</strong></a>
             <a href="../pages/blog.html"><strong>Blog</strong></a>
+            <a href="../pages/contact-me.html"><strong>Contact Me</strong></a>
         </nav>
     </header>
     <main>
-        <h1>Contact Me</h1>
-        <p>enter contact me form</p>
+        <h1>Hi! Thank you for visiting!</h1>
+        <p>Thank you for visiting my portfolio website. While navigating through the different areas of my portfolio website, my current coding experience and skills will be presented. This will also allow for a starting point so I can expand on further services and skills.</p>
     </main>
     <footer class="footer">
         <div class="footer-contents">
