--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -9,9 +9,9 @@
 <head>
 <body>
     <header class="header">
-            <a href="./index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
+            <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
-            <a href="./index.html"><strong>Home</strong></a>
+            <a href="../pages/index.html"><strong>Home</strong></a>
             <a href="../pages/projects.html"><strong>Projects</strong></a>
             <a href="../pages/blog.html"><strong>Blog</strong></a>
             <a href="../pages/contact-me.html"><strong>Contact Me</strong></a>
@@ -21,22 +21,24 @@
         <h1>About Me</h1>
         <p>My name is Angela Pogoda, I recently graduated university with a Bachelor of Business minoring in Human Resources and Marketing. I currently work in Human Resources and am excited to also start working as a Web Developer. I’m interested to learn about the different areas within Web Development and what is required to make things function. I have worked in a few different industries and believe that I have transferrable skills that are already helping me learn about Web Development.</p>
     </main>
-    <footer>
-        <div class="social-media">
-            <p>Get to know me further on:</p>
+    <footer class="footer">
+        <div class="footer-contents">
+            <div class="social-media">
+                <p>Get to know me further on:</p>
                 <a href="https://www.github.com/AngelaPogoda" target="_blank"><img src="../links/github.svg" alt="GitHub icon"></a>
                 <a href="https://www.linkedin.com/in/angela-pogoda-2885891a0/" target="_blank"><img src="../links/linkedin.svg" alt="LinkedIn icon"></a>    
                 <a href="https://twitter.com/AngelaPogoda" target="_blank"><img src="../links/twitter.svg" alt="Twitter icon"></a>
                 <a href="https://www.facebook.com/" target="_blank"><img src="../links/facebook.svg" alt="Facebook icon"></a>
                 <a href="https://www.instagram.com/" target="_blank"><img src="../links/instagram.svg" alt="Instagram icon"> </a>
+            </div>
+            <div class="contact-info">
+                <h4>Contact Me</h4>
+                <p>Phone: 0400 000 000</p>
+                <p>Email: angela@gmail.com</p>
+                <h5>© Angela Pogoda 2022</h5>
+            </div>
         </div>
-        <div class="contact-info">
-            <h4>Contact Me</h4>
-            <p>Phone: 0400 000 000</p>
-            <p>Email: angela@gmail.com</p>
-            <h5>© Angela Pogoda 2022</h5>
-        </div>
-        </footer>
+    </footer>
 </body>
 </head>
 </html>
