need to adjust blog post and form display

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -22,37 +22,42 @@
         <div class="blog-cards">
             <img src="../images/My-Pets.jpg" alt="My Pets icon"></a>
                 <div class="container blog-text">
-                    <h5>My Pets</h5>
-                    <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. Click here to read more.</p>
+                    <h5>My Pets | Published: 1st November 2022</h5>
+                    <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months.</p>
+                    <a href="">Click here to read more.</a>
                 </div>
         </div>
         <div class="blog-cards">
             <img src="../images/Auslan-alphabet.jpg" alt="Auslan Alphabet icon"></a>
-            <div class="container blog-text">
-                <h5>My Pets</h5>
-                <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. Click here to read more.</p>
-            </div>
+                <div class="container blog-text">
+                    <h5>Auslan | Published: 3rd November 2022</h5>
+                    <p>I have had the opportunity to interact with numerous deaf or hard of hearing customers over the years. This has made me realise how important I find being able to learn and use sign language.</p>
+                    <a href="">Click here to read more.</a>
+                </div>
         </div>
         <div class="blog-cards">
             <img src="../images/The-Pyjama-Foundation.png" alt="The Pyjama Foundation icon"></a>
-            <div class="container blog-text">
-                <h5>My Pets</h5>
-                <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. Click here to read more.</p>
-            </div>
+                <div class="container blog-text">
+                    <h5>The Pyjama Foundation | Published: 6th November 2022</h5>
+                    <p>I recently learnt what the Pyjama Foundation’s goals are and how to become a Pyjama Angel to a Pyjama Child. This was due to a colleague mentioning that she is a Pyjama Angel.</p>
+                    <a href="">Click here to read more.</a>
+                </div>
         </div>
         <div class="blog-cards">
             <img src="../images/Rosies.png" alt="Rosies icon"></a>
-            <div class="container blog-text">
-                <h5>My Pets</h5>
-                <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. Click here to read more.</p>
-            </div>
+                <div class="container blog-text">
+                    <h5>Rosies | Published: 9th November 2022</h5>
+                    <p>I completed a 10km Darkness to Daylight run earlier this year, once completed I looked at the stalls in the seating area. There was a Rosies stall which I was interested in due to the possibility of helping the homeless.</p>
+                    <a href="">Click here to read more.</a>
+                </div>
         </div>
         <div class="blog-cards">
             <img src="../images/Plants.jpg" alt="Plants icon"></a>
-            <div class="container blog-text">
-                <h5>My Pets</h5>
-                <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. Click here to read more.</p>
-            </div>
+                <div class="container blog-text">
+                    <h5>Gardening | Published: 11th November 2022</h5>
+                    <p>My mum has a very extensive garden with a variety of fruit, veggies, herbs, flowers and trees, amongst other plants. I have purchased a few succulents and cacti over the last few months and have enjoyed seeing their growth so far.</p>
+                    <a href="">Click here to read more.</a>
+                </div>
         </div>
     </main>
     <footer class="footer">
