--- a/pages/contact-me.html
+++ b/pages/contact-me.html
@@ -19,7 +19,17 @@
     </header>
     <main>
         <h1>Contact Me</h1>
-        <p>enter contact me form</p>
+        <form action="/" method="get">
+            <label for="name">Please enter your full name</label>
+            <input type="text" name="info">
+            <label for="name">Please enter your email address</label>
+            <input type="email" name="info">
+            <label for="name">Please enter your phone number</label>
+            <input type="phone number" name="info">
+            <label for="name">Please enter your message</label>
+            <input type="text" name="info">
+            <button>Submit</button> <input type="submit" value=”submit this form”> 
+        </form>
     </main>
     <footer class="footer">
         <div class="footer-contents">
