contact me and blog pages almost complete, just need to modify display

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -17,9 +17,22 @@
             <a href="../pages/contact-me.html"><strong>Contact Me</strong></a>
         </nav>
     </header>
-    <main>
+    <main class="about-me">
         <h1>About Me</h1>
-        <p>My name is Angela Pogoda, I recently graduated university with a Bachelor of Business minoring in Human Resources and Marketing. I currently work in Human Resources and am excited to also start working as a Web Developer. I’m interested to learn about the different areas within Web Development and what is required to make things function. I have worked in a few different industries and believe that I have transferrable skills that are already helping me learn about Web Development.</p>
+            <div class="about-me-photo">
+                <img src="../images/Angela-Pogoda-photo.png" alt="Angela Pogoda photo">
+            </div>
+        <p>Hi! My name is Angela Pogoda, I recently graduated university with a Bachelor of Business minoring in Human Resources and Marketing. I currently work in Human Resources and am excited to also start working as a Web Developer. I’m interested to learn about the different areas within Web Development and what is required to make things function. I have worked in a few different industries and believe that I have transferrable skills that are already helping me learn about Web Development.</p>
+        <p>My work history over the last 10 years has ranged from working in:</p>
+                <li>- Hospitality</li>
+                <li>- Retail</li>
+                <li>- Real Estate</li>
+                <li>- Insurance</li> 
+                <li>- Administration and</li>
+                <li>- Human Resources</li> 
+        <p>I’m hoping to include Web Development in this list shortly.</p>
+        <p>For further details regarding my work history, please see my resume below.</p>
+        <a href="../pages/Angela-Pogoda-Portfolio-Resume.pdf" alt="Download Resume">Download Resume</a>
     </main>
     <footer class="footer">
         <div class="footer-contents">
