--- a/pages/contact-me.html
+++ b/pages/contact-me.html
@@ -20,15 +20,15 @@
     <main>
         <h1>Contact Me</h1>
         <form action="/" method="get">
-            <label for="name">Please enter your full name</label>
-            <input type="text" name="info">
-            <label for="name">Please enter your email address</label>
-            <input type="email" name="info">
-            <label for="name">Please enter your phone number</label>
-            <input type="phone number" name="info">
-            <label for="name">Please enter your message</label>
-            <input type="text" name="info">
-            <button>Submit</button> <input type="submit" value=”submit this form”> 
+            <label for="Name"></label>
+            <input type="text" id="Name" name="Name" size="40" placeholder="Please enter your full name">
+            <label for="Email"></label>
+            <input type="email" required id="Email" name="Email" size="40" placeholder="Please enter your email address">
+            <label for="Phone Number"></label>
+            <input type="phone number" id="Phone Number" size="40" placeholder="Please enter your phone number">
+            <label for="Message"></label>
+            <input type="text" id="Message" name="Message" size="40" placeholder="Please enter your message">
+            <button>Submit</button> 
         </form>
     </main>
     <footer class="footer">
