updated readme.md file

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -20,7 +20,7 @@
     <main class="blog">
         <h1>Blog</h1>
         <div class="blog-cards">
-            <img src="../images/My-Pets.jpg" alt="My Pets icon"></a>
+            <img class="my-pets" src="../images/My-Pets.jpg" alt="My Pets icon"></a>
                 <div class="container blog-text">
                     <h5>My Pets | Published: 1st November 2022</h5>
                     <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months.</p>
