I have added and removed media queries, the blog page had issues I haven't figured out how to resolve after adding media queries. Also added content to the Projects page.

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -8,6 +8,7 @@
     <title>Angela Pogoda's Portfolio</title>
 <head>
 <body>
+<!--the logo below is the first component of my portfolio-->
     <header class="header">
             <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
