--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,6 +8,7 @@
     <title>Angela Pogoda's Portfolio</title>
 <head>
 <body>
+<!--the logo below is the first component of my portfolio-->
     <header class="header">
             <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
@@ -19,11 +20,12 @@
     </header>
     <main class="blog">
         <h1>Blog</h1>
+<!--the blog cards below are the second component of my portfolio-->
         <div class="blog-cards">
             <img class="my-pets" src="../images/My-Pets.jpg" alt="My Pets icon"></a>
                 <div class="container blog-text">
                     <h5>My Pets | Published: 1st November 2022</h5>
-                    <p>I currently have 8 pets. I have four girl mice, two boy mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months.</p>
+                    <p>I currently have 8 pets. I have two boy mice, four girl mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. I didn't intend on having mice or kittens as pets, especially at the same time but I'm really happy that they are in my life!</p>
                     <a href="">Click here to read more.</a>
                 </div>
         </div>
@@ -31,7 +33,7 @@
             <img src="../images/Auslan-alphabet.jpg" alt="Auslan Alphabet icon"></a>
                 <div class="container blog-text">
                     <h5>Auslan | Published: 3rd November 2022</h5>
-                    <p>I have had the opportunity to interact with numerous deaf or hard of hearing customers over the years. This has made me realise how important I find being able to learn and use sign language.</p>
+                    <p>I have had the opportunity to interact with numerous deaf or hard of hearing customers over the years. This has made me realise how important I find being able to learn and use sign language. Earlier this year, I completed two Introduction to Auslan courses and plan on continuing the more advanced courses after completing this bootcamp. I also find that the languages vary slightly by state extremely interesting.</p>
                     <a href="">Click here to read more.</a>
                 </div>
         </div>
@@ -39,7 +41,7 @@
             <img src="../images/The-Pyjama-Foundation.png" alt="The Pyjama Foundation icon"></a>
                 <div class="container blog-text">
                     <h5>The Pyjama Foundation | Published: 6th November 2022</h5>
-                    <p>I recently learnt what the Pyjama Foundation’s goals are and how to become a Pyjama Angel to a Pyjama Child. This was due to a colleague mentioning that she is a Pyjama Angel.</p>
+                    <p>I recently learnt what the Pyjama Foundation’s goals are and how to become a Pyjama Angel to a Pyjama Child. This was due to a colleague mentioning that she is a Pyjama Angel. I am now a Pyjama Angel volunteer which is incredibly rewarding. Being a Pyjama Angel requires an hour of your personal time each week.</p>
                     <a href="">Click here to read more.</a>
                 </div>
         </div>
@@ -47,7 +49,7 @@
             <img src="../images/Rosies.png" alt="Rosies icon"></a>
                 <div class="container blog-text">
                     <h5>Rosies | Published: 9th November 2022</h5>
-                    <p>I completed a 10km Darkness to Daylight run earlier this year, once completed I looked at the stalls in the seating area. There was a Rosies stall which I was interested in due to the possibility of helping the homeless.</p>
+                    <p>I completed a 10km Darkness to Daylight run earlier this year, once completed I looked at the stalls in the seating area. There was a Rosies stall which I was interested in due to the possibility of helping the homeless. Being a Rosies volunteer requires four hours of your personal time each month. I have recently applied to become a volunteer with Rosies and am excited to experience another form of volunteering.</p>
                     <a href="">Click here to read more.</a>
                 </div>
         </div>
@@ -55,7 +57,7 @@
             <img src="../images/Plants.jpg" alt="Plants icon"></a>
                 <div class="container blog-text">
                     <h5>Gardening | Published: 11th November 2022</h5>
-                    <p>My mum has a very extensive garden with a variety of fruit, veggies, herbs, flowers and trees, amongst other plants. I have purchased a few succulents and cacti over the last few months and have enjoyed seeing their growth so far.</p>
+                    <p>My mum has a very extensive garden with a variety of fruit, veggies, herbs, flowers and trees, amongst other plants. I have purchased a few succulents and cacti over the last few months and have enjoyed seeing their growth so far. I also did have a few bonsai plants but will need to purchase more after learning how to care for them better.</p>
                     <a href="">Click here to read more.</a>
                 </div>
         </div>
