--- a/pages/index.html
+++ b/pages/index.html
@@ -8,6 +8,7 @@
     <title>Angela Pogoda's Portfolio</title>
 <head>
 <body>
+<!--the logo below is the first component of my portfolio-->
     <header class="header">
             <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
@@ -17,9 +18,12 @@
             <a href="../pages/contact-me.html"><strong>Contact Me</strong></a>
         </nav>
     </header>
+
     <main>
         <h1>Hi! Thank you for visiting!</h1>
         <p>Thank you for visiting my portfolio website. While navigating through the different areas of my portfolio website, my current coding experience and skills will be presented. This will also allow for a starting point so I can expand on further services and skills.</p>
+        <p>The areas of my website range from more information about me, my projects, blog posts and a contact me form.</p>
+        <p>Feel free to get in touch with me through my Contact Me page!</p>
     </main>
     <footer class="footer">
         <div class="footer-contents">
