--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,6 +8,7 @@
     <title>Angela Pogoda's Portfolio</title>
 <head>
 <body>
+<!--the logo below is the first component of my portfolio-->
     <header class="header">
             <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
@@ -19,7 +20,17 @@
     </header>
     <main>
         <h1>Projects</h1>
-        <p>enter info about projects</p>
+        <p>I'm aiming to work on a few projects where possible around the Web Development course. This is to improve my skills and ensure that I'm understanding the areas within Web Development the best I can. These include creating:</p>
+        <p>Front-End projects:</p>
+            <li>- A time converter which can calculate days to months and more</li>
+            <li>- A website that can read QR codes</li>
+            <li>- A clone of a website that already exists</li>
+        <p>Back-End projects:</p>
+            <li>- Algorithms</li>
+            <li>- Something similar to Instagram profile page layouts, Netflix or Pinterest</li>
+        <p>Full Stack projects:</p>
+            <li>- An app with games</li>
+            <li>- An app similar to Woolworths </li>
     </main>
     <footer class="footer">
         <div class="footer-contents">
