--- a/pages/contact-me.html
+++ b/pages/contact-me.html
@@ -8,6 +8,7 @@
     <title>Angela Pogoda's Portfolio</title>
 <head>
 <body>
+<!--the logo below is the first component of my portfolio-->
     <header class="header">
             <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
