I have added comments throughout the HTML and SCSS files

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,7 +8,7 @@
     <title>Angela Pogoda's Portfolio</title>
 <head>
 <body>
-<!--the logo below is the first component of my portfolio-->
+<!--the logo below is the second component of my portfolio-->
     <header class="header">
             <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
@@ -20,7 +20,7 @@
     </header>
     <main class="blog">
         <h1>Blog</h1>
-<!--the blog cards below are the second component of my portfolio-->
+<!--the blog cards below are the third component of my portfolio-->
         <div class="blog-cards">
             <img class="my-pets" src="../images/My-Pets.jpg" alt="My Pets icon"></a>
                 <div class="container blog-text">
@@ -62,6 +62,7 @@
                 </div>
         </div>
     </main>
+<!--the footer below is the fourth component of my portfolio-->
     <footer class="footer">
         <div class="footer-contents">
             <div class="social-media">
