--- a/pages/contact-me.html
+++ b/pages/contact-me.html
@@ -20,6 +20,8 @@
     </header>
     <main>
         <h1>Contact Me</h1>
+        <p>Please feel free to contact me through the form below.</p>
+        <p>Please expect a response within the next 3 days. I look forward to getting to know you!</p>
         <form action="/" method="get">
             <label for="Name"></label>
             <input type="text" id="Name" name="Name" size="40" placeholder="Please enter your full name">
