Almost finished adding information for the My Pets blog post

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,8 +8,9 @@
     <title>Angela Pogoda's Portfolio</title>
 <head>
 <body>
-<!--the logo below is the second component of my portfolio-->
+<!--the header below is the first component of my portfolio-->
     <header class="header">
+<!--the logo below is the second component of my portfolio-->
             <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
             <a href="../pages/index.html"><strong>Home</strong></a>
@@ -26,7 +27,7 @@
                 <div class="container blog-text">
                     <h5>My Pets | Published: 1st November 2022</h5>
                     <p>I currently have 8 pets. I have two boy mice, four girl mice, one girl kitten and a boy kitten. I have had the mice for a year and the kittens for approximately eight months. I didn't intend on having mice or kittens as pets, especially at the same time but I'm really happy that they are in my life!</p>
-                    <a href="">Click here to read more.</a>
+                    <a href="../pages/blog-post-my-pets.html">Click here to read more.</a>
                 </div>
         </div>
         <div class="blog-cards">
