--- a/pages/index.html
+++ b/pages/index.html
@@ -8,8 +8,9 @@
     <title>Angela Pogoda's Portfolio</title>
 <head>
 <body>
-<!--the logo below is the first component of my portfolio-->
+<!--the header below is the first component of my portfolio-->
     <header class="header">
+<!--the logo below is the second component of my portfolio-->
             <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
             <a href="../pages/about-me.html"><strong>About Me</strong></a>
@@ -25,6 +26,7 @@
         <p>The areas of my website range from more information about me, my projects, blog posts and a contact me form.</p>
         <p>Feel free to get in touch with me through my Contact Me page!</p>
     </main>
+<!--the footer below is the fourth component of my portfolio-->
     <footer class="footer">
         <div class="footer-contents">
             <div class="social-media">
