--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,8 +8,9 @@
     <title>Angela Pogoda's Portfolio</title>
 <head>
 <body>
-<!--the logo below is the first component of my portfolio-->
+<!--the header below is the first component of my portfolio-->
     <header class="header">
+<!--the logo below is the second component of my portfolio-->
             <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
             <a href="../pages/index.html"><strong>Home</strong></a>
@@ -32,6 +33,7 @@
             <li>- An app with games</li>
             <li>- An app similar to Woolworths </li>
     </main>
+<!--the footer below is the fourth component of my portfolio-->
     <footer class="footer">
         <div class="footer-contents">
             <div class="social-media">
