--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -8,8 +8,9 @@
     <title>Angela Pogoda's Portfolio</title>
 <head>
 <body>
-<!--the logo below is the first component of my portfolio-->
+<!--the header below is the first component of my portfolio-->
     <header class="header">
+<!--the logo below is the second component of my portfolio-->
             <a href="../pages/index.html" class="logo"><img src="../images/Logo.jpg" alt="Angela Pogoda Logo icon"></a>
         <nav class="nav-items">
             <a href="../pages/index.html"><strong>Home</strong></a>
@@ -20,10 +21,11 @@
     </header>
     <main class="about-me">
         <h1>About Me</h1>
-            <div class="about-me-photo">
+            <div class="photos">
                 <img src="../images/Angela-Pogoda-photo.png" alt="Angela Pogoda photo">
             </div>
         <p>Hi! My name is Angela Pogoda, I recently graduated university with a Bachelor of Business minoring in Human Resources and Marketing. I currently work in Human Resources and am excited to also start working as a Web Developer. I’m interested to learn about the different areas within Web Development and what is required to make things function. I have worked in a few different industries and believe that I have transferrable skills that are already helping me learn about Web Development.</p>
+        <h1>Work History</h1>
         <p>My work history over the last 10 years has ranged from working in:</p>
                 <li>- Hospitality</li>
                 <li>- Retail</li>
@@ -35,6 +37,7 @@
         <p>For further details regarding my work history, please see my resume below.</p>
         <a href="../pages/Angela-Pogoda-Portfolio-Resume.pdf" alt="Download Resume">Download Resume</a>
     </main>
+<!--the footer below is the fourth component of my portfolio-->
     <footer class="footer">
         <div class="footer-contents">
             <div class="social-media">
